[profile.release]
panic = "unwind"

[workspace]
members = [
    "bin/europa/",
    "bin/europa/cli",
    "bin/europa/rpc",
    "bin/europa/executor",
    "bin/europa/runtime",
    "bin/europa/pallets/account-linker",
    "bin/europa/pallets/offchain-worker",

    "client/api",
    "client/cli",
    "client/db",
    "client/executor",
    "client/service",
    "client/rpc",

    "primitives/sandbox",
]
exclude = [ "vendor/substrate" ]
