[profile.release]
panic = "unwind"

[patch.crates-io]
parity-wasm = { git = "https://github.com/patractlabs/parity-wasm", branch = "v0.41.0" }

[workspace]
members = [
    "bin/europa/",
    "bin/europa/cli",
    "bin/europa/rpc",
    "bin/europa/executor",
    "bin/europa/runtime",
    "bin/europa/pallets/account-linker",
    "bin/europa/pallets/offchain-worker",

    "client/api",
    "client/cli",
    "client/db",
    "client/executor",
    "client/service",
    "client/rpc",

    "primitives/sandbox",
]
exclude = [ "vendor/substrate" ]
